--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 
 Todo Items:
 - Disable automatic RST response from OS without touching 'iptables'
-- Create README that explains how to use the tool
+- Refine TCP protocol implementation even further
 
